# daft-dublin-rent-tracker

./: .gitignore  LICENSE  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt
.github/workflows/: update-and-publish.yml
.verification/: pages.json
data/: events.jsonl  listings.csv  listings.json  rent_ie_status.json  state.json
scripts/: get_google_refresh_token.py  push_to_github.sh
seeds/: SEED_NOTES.md  listings_seed.csv  rent_ie_seed.csv
site/: index.html
site/data/: events.jsonl  listings.csv  listings.json
src/daft_tracker/: cli.py  config.py  gmail_client.py  parser.py  rent_ie.py  site.py  store.py
tests/: test_parser.py  test_rent_ie.py
